--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: project_atlas
+name: Atlas
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
@@ -31,14 +31,14 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^2.1.0
-  fl_chart: ^0.55.2
+  fl_chart: ^0.40.6
   google_maps_flutter: ^2.1.1
-  syncfusion_flutter_charts: ^22.1.34
+  syncfusion_flutter_charts: ^21.2.4
   flutter_map: ^4.0.0
   latlong2: ^0.8.1
   http: 0.13.6
   flutter_vlc_player: ^7.4.2
-
+  flutter_svg: ^1.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -47,6 +47,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_launcher_icons: ^0.9.2
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/icons/igs (1).png"
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -68,6 +74,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
+    - assets/ATLAS.png
     - assets/ATLASgif.gif
 
   # An image asset can refer to one or more resolution-specific "variants", see
